src/resources/snapshots/git_events_runner__resources__action__tests__default_action_job.snap
---
source: src/resources/action.rs
expression: job_spec
---
apiVersion: batch/v1
kind: Job
metadata:
  labels:
    git-events-runner.rs/action-kind: Action
    git-events-runner.rs/action-name: default-test-action
    git-events-runner.rs/source-kind: GitRepo
    git-events-runner.rs/source-name: action-test-source
    git-events-runner.rs/trigger-kind: ScheduleTrigger
    git-events-runner.rs/trigger-name: test-schedule-trigger-name
  name: default-test-action-YYYYMMDD-HHMMSS-xx
  ownerReferences:
    - apiVersion: ""
      kind: ""
      name: ""
      uid: ""
spec:
  activeDeadlineSeconds: 3600
  backoffLimit: 0
  parallelism: 1
  template:
    spec:
      containers:
        - env:
            - name: ACTION_JOB_WORKDIR
              value: /action_workdir
            - name: ACTION_JOB_TRIGGER_SOURCE_KIND
              value: GitRepo
            - name: ACTION_JOB_TRIGGER_SOURCE_NAME
              value: action-test-source
            - name: ACTION_JOB_TRIGGER_SOURCE_COMMIT
              value: e03087d8f722a423bc13fd31542fb9545da784dd
            - name: ACTION_JOB_TRIGGER_SOURCE_REF_TYPE
              value: branch
            - name: ACTION_JOB_TRIGGER_SOURCE_REF_NAME
              value: main
            - name: ACTION_JOB_TRIGGER_KIND
              value: ScheduleTrigger
            - name: ACTION_JOB_TRIGGER_NAME
              value: test-schedule-trigger-name
            - name: ACTION_JOB_TRIGGER_SOURCE_NAMESPACE
              value: actions-test
          image: "ghcr.io/alex-karpenko/git-events-runner/action-worker:v0.4.15"
          name: action-worker
          volumeMounts:
            - mountPath: /action_workdir
              name: action-workdir
          workingDir: /action_workdir
      initContainers:
        - args:
            - "--kind"
            - GitRepo
            - "--source"
            - action-test-source
            - "--destination"
            - /action_workdir
            - "--commit"
            - e03087d8f722a423bc13fd31542fb9545da784dd
          image: "ghcr.io/alex-karpenko/git-events-runner/gitrepo-cloner:v0.4.15"
          name: action-cloner
          volumeMounts:
            - mountPath: /action_workdir
              name: action-workdir
      restartPolicy: Never
      volumes:
        - emptyDir: {}
          name: action-workdir
  ttlSecondsAfterFinished: 7200
